--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -22,7 +22,7 @@
       <div class="col-md-3">
         <div class="card">
           <div class="card-body tab">
-            <p style="color: white; opacity: 1;">{{category.name}}</p>
+            <p>{{category.name}}</p>
           </div>
         </div>
       </div>
