--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -1,3 +1,12 @@
+<nav class="navbar navbar-light bg-light">
+  <a class="navbar-brand" href="/">
+    The Shirt Company
+  </a>
+  <span class="navbar-text" style="float: right">
+    <i class="fa fa-opencart" style="font-size:36px;color:red"></i>
+    KES 5,800
+    </span>
+</nav>
 <div id="shop-products">
   <div class="row">
     <div v-for="product in products">
