--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,11 +28,21 @@ h1, h2, h3, h4, h5, h6 {
 .tab {
   font-size: 15px;
   padding: 50px;
-  background-image: url('shirt');
   background-size: cover;
   background-repeat: no-repeat;
   opacity: 0.7;
 }
-.fa-shopping-bag {
-  font-size:36px;
+.brand-image {
+  max-height: 200px;
+}
+.category-image {
+  opacity: 0.8;
+  max-height: 100px;
+}
+.centered {
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
