--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -11,7 +11,7 @@
   <div class="row">
     <div v-for="product in products">
       <div class="col-md-3">
-        <div class="card" style="width: 18rem;">
+        <div class="card">
           <img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJaQ2RwgQLw2RBzeOaJbVJszq3rHE2pehHFw1spmDGYmKWdxiNTg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">{{product.name}}</h5>
