--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -6,10 +6,9 @@
         <div class="col-md-4">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">{{brand.name}}</h5>
-              <!-- <h6 class="card-subtitle mb-2 text-muted">{{brand.tagline}}</h6> -->
+                <img v-bind:src="brand.image" v-bind:alt="brand.name" class="brand-image">
               <p class="card-text">{{brand.desc}}</p>
-                <%= link_to '', store_path(1), class: "fa fa-shopping-bag" %>
+              <a class="fa fa-shopping-bag" v-bind:href="'/stores/' + brand.id"></a>
             </div>
           </div>
         </div>
@@ -20,11 +19,8 @@
   <div class="row categories">
     <div v-for="category in categories">
       <div class="col-md-3">
-        <div class="card">
-          <div class="card-body tab">
-            <p>{{category.name}}</p>
-          </div>
-        </div>
+           <img v-bind:src="category.image" v-bind:alt="category.name" class="category-image">
+           <div class="centered">{{category.name}}</div>
       </div>
     </div>
   </div>
