--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -11,18 +11,12 @@
   <div class="row">
     <div v-for="product in products">
       <div class="col-md-3">
-        <div class="card">
+        <div class="card items">
           <img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJaQ2RwgQLw2RBzeOaJbVJszq3rHE2pehHFw1spmDGYmKWdxiNTg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">{{product.name}}</h5>
-            <div class="row">
-              <div class="col-md-6">
-                <p class="card-text">{{product.price}}</p>
-              </div>
-              <div class="col-md-6">
-                <a href="#"><i class="fa fa-cart-plus" style="font-size:36px;color:red"></i></a>
-              </div>
-            </div>
+            <p class="card-text">{{product.price}}</p>
+            <a href="#"><i class="fa fa-cart-plus" style="font-size:36px;color:red"></i></a>
           </div>
         </div>
       </div>
